--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,3 +1,12 @@
+ 
+{
+  // Name this configuration
+  "name": "Codespace for Skills!",
+  // Use the base codespace image
+  "image": "mcr.microsoft.com/vscode/devcontainers/universal:latest",
+
+  "remoteUser": "codespace",
+  "overrideCommand": false
  ,
  // Add the IDs of extensions you want installed when the container is created.
  "customizations": {
@@ -12,12 +21,7 @@
          ]
      }
  }
-{
-  // Name this configuration
-  "name": "Codespace for Skills!",
-  // Use the base codespace image
-  "image": "mcr.microsoft.com/vscode/devcontainers/universal:latest",
+ ,
+ "postCreateCommand": "echo '# Writing code upon codespace creation!'  >> codespace.md"
 
-  "remoteUser": "codespace",
-  "overrideCommand": false
 }
